// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dispays subtitle 1`] = `
<section
  className="section"
>
  <div
    className="container"
  >
    <h2
      className="subtitle"
    >
      subtitle
    </h2>
  </div>
</section>
`;

exports[`displays children 1`] = `
<section
  className="section"
>
  <div
    className="container"
  >
    text
  </div>
</section>
`;

exports[`displays title 1`] = `
<section
  className="section"
>
  <div
    className="container"
  >
    <h1
      className="title"
    >
      title
    </h1>
  </div>
</section>
`;

exports[`hides subtitle 1`] = `
<section
  className="section"
>
  <div
    className="container"
  />
</section>
`;

exports[`hides title 1`] = `
<section
  className="section"
>
  <div
    className="container"
  />
</section>
`;
